# praxis-copilot

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  com.praxis.analyst.plist  com.praxis.filing-research.plist  com.praxis.manage.plist  com.praxis.research-queue.plist  com.praxis.scanner.plist  pyproject.toml
config/: 8k_scanner.yaml  events.yaml  exposure_map.yaml  manage.yaml  news.yaml  portfolio.yaml  thesis_watches.yaml  ticker_registry.yaml  universe.yaml  watch.yaml  watch_state.yaml
config/monitors/: agm-farm-delinquency-rate.yaml  agm-infrastructure-portfolio-share.yaml  agm-quarterly-spread-metrics.yaml  apyx-ayon-fda-510k-clearance-tracker.yaml  apyx-glp-1-body-contouring-demand-signal.yaml  (+183 more)
docs/: claude-desktop-setup.md  cli-filing-parser-design.md  ipc-architecture.md
playground/: todo-2026-04-04.md  todo-4-6.md  todo-refinements.md  todo-tonight.md
scripts/: audit_8k_prescreen.py  batch_analyze.sh  daemon-health.sh  deploy_8k_events.sh  deploy_manage.sh  deploy_monitors.sh  deploy_news_scanner.sh  parallel_claude.py  release_smoke_check.sh
tests/: conftest.py  test_8k_alerts.py  test_8k_llm_usage.py  test_8k_poller_state.py  test_8k_s3_timestamps.py  test_cli_pipeline_interactive.py  test_cli_pipeline_status.py  test_cli_status.py  test_events_dispatch.py  test_extractor_press_releases.py  test_filing_alerts_handler.py  test_filing_analyzer.py  test_filing_poller_handler_filters.py  test_intraday.py  test_monitor_cadence.py  test_monitor_filing_collector.py  test_monitor_handler_bucket.py  test_search_collector.py  test_watch.py
(+127 files in other folders)
