[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis-cli"
version = "0.1.0"
description = "CLI tool for the Praxis Copilot system"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "boto3>=1.28",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.scripts]
praxis = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
